# robotics-publish

./: README.md
01_introduction/: 01_introduction.qmd  _quarto.yml  custom.scss
01_introduction/c2888f2a/: .nojekyll
01_introduction/contents/: _classification.qmd  _frontmatter.qmd
01_introduction/docs/: 01_introduction.html  search.json
02_rigid_motions/: 02_rigid_motions.qmd
02_rigid_motions/contents/: _frontmatter.qmd  _introduction.qmd  _three_dimensions.qmd  _two_dimensions.qmd
02_rigid_motions/docs/: 02_rigid_motions.html  search.json
03_time_and_motion/: 03_time_and_motion.qmd  _quarto.yml
03_time_and_motion/contents/: _derivative.qmd  _dynamics.qmd  _frontmatter.qmd  _incremental.qmd  _inertial.qmd  _ins.qmd  _veltransform.qmd  _wrenchtransform.qmd
03_time_and_motion/docs/: 03_time_and_motion.html  (+1 more)
04_mobile_robot_vehicles/: 04_mobile_robot_vehicles.qmd  _quarto.yml
05_navigation/: 05_navigation.qmd  _quarto.yml
06_localization/: 06_localization.qmd  _quarto.yml
07_robot_arm_kinematics/: 07_robot_arm_kinematics.qmd  _quarto.yml  custom.scss
docs/: 01_introduction.html  02_rigid_motions.html  03_time_and_motion.html  04_mobile_robot_vehicles.html  05_navigation.html  06_localization.html  07_robot_arm_kinematics.html  index.html  navigation.html  search.json
projects/navigation/implementation/: plan.py  plan1.py  plan2.py  plan_scr.py  pyproject.toml  rrt.eps
projects/navigation/implementation/implementation/: constants.py  kinematics.py  occupancy.py  plotter.py  rrt.py
projects/navigation/implementation/iterations/: plan.py
(+51 files in other folders)
