[tool.poetry]
name = "implementation"
version = "0.1.0"
description = ""
authors = ["Aykut C. Satici <acsatici@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
matplotlib = "^3.6.3"

[tool.poetry.scripts]
my-script = "plan:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
